# sales-conversion-agent

./: .dockerignore  .env.example  .firebaserc  .gitignore  CONCURRENCY.md  Dockerfile  FUTURE.md  LEARNINGS.md  LICENSE  README.md  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
agent/: sarvam-stt-bridge.js  vapi-assistant.json
app/: concurrency.py  config.py  dashboard_api.py  main.py  rate_limit.py  secrets.py
app/crm/: db.py  firestore_client.py  firestore_repo.py  firestore_seeds.py  repository.py  seeds.py
app/llm/: key_rotator.py  proxy.py
app/panel/: ws.py
app/pipecat_bot/: bot.py  call_state.py  memory.py  prompts.py
app/telephony/: cadence.py  callback_worker.py  outbound.py  vobiz_routes.py
demo/: crm.html  index.html
legacy/agent/: sarvam-tts-bridge.js  system-prompt.md  vapi-assistant.json
legacy/llm/: keyRotator.js
legacy/scripts/: test-llm-proxy.js
legacy/server/: index.js
legacy/sqlite_impl/: db.py  repository.py  seeds.py
llm/: proxy.js
panel/: LiveReasoningPanel.jsx  index.html  main.jsx  package-lock.json  package.json  vite.config.js
panel/src/: App.jsx  index.css
scripts/: bench_llm.py  create-vapi-assistant.js  deploy.sh  load_test_concurrency.py  push_secrets.sh  seed_db.py  test_llm_proxy.py  trigger-call.js  trigger_call.py  voice_ab.py  wipe_and_reseed.py
server/: broadcast.js  context.js  index.js
tests/: conftest.py
tests/integration/: test_conversation_sim.py  test_deepgram_smoke.py  test_llm_proxy.py  (+3 more)
(+25 files in other folders)
