[project]
name = "aria-conversion-agent"
version = "0.1.0"
description = "Aria — Pipecat + Vobiz + ElevenLabs voice agent for post-demo parent conversion (Firestore + Cloud Run)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
    "google-cloud-firestore>=2.16",
    "google-cloud-secret-manager>=2.20",
    "pipecat-ai[deepgram,silero,websocket,openai,sarvam]>=0.0.50",
    "pipecat-vobiz>=0.0.3,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "respx>=0.20",
]
